# rag_ib

./: .gitignore  README.md  data.csv  docker-compose.yaml
app/: .env_example  Dockerfile  app.py  entrypoint.sh  pyproject.toml  requirements.txt
app/api/: models.py  news_router.py  parser.py  preprocess.py  schema.py  storages.py
app/api/config/: gunicorn.conf.py  model_config.py  sgi_config.py
app/index/: __init__.py  full_text_search.py  semantic_search.py
app/parser/: __init__.py  dump_parse.py  parser.py
cron/: Dockerfile  cronjob  send_request.sh
frontend/: Dockerfile  gradio  pyproject.toml  requirements.txt
