[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = [" Nasibullin Alan Maratovich <alan.nasibyllin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.8.0"
unicorn = "^2.1.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
